Implement Tests for Memory & ExternalMemory

--- a/Source/Reloaded.Memory.Tests/Reloaded.Memory.Tests.csproj
+++ b/Source/Reloaded.Memory.Tests/Reloaded.Memory.Tests.csproj
@@ -23,4 +23,20 @@
     <ProjectReference Include="..\Reloaded.Memory\Reloaded.Memory.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="HelloWorld.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="HelloWorldCore.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
