--- a/Source/Reloaded.Memory/Reloaded.Memory.csproj
+++ b/Source/Reloaded.Memory/Reloaded.Memory.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
-    <DocumentationFile>E:\Users\Desktop\Github\Reloaded Project\Reloaded.Memory\Source\Reloaded.Memory\Reloaded.Memory.xml</DocumentationFile>
+    <DocumentationFile>Reloaded.Memory.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
