--- a/Source/Reloaded.Memory.Tests/Reloaded.Memory.Tests.csproj
+++ b/Source/Reloaded.Memory.Tests/Reloaded.Memory.Tests.csproj
@@ -10,6 +10,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="coverlet.msbuild" Version="2.4.0">
       <PrivateAssets>all</PrivateAssets>
