--- a/Source/Reloaded.Memory/Reloaded.Memory.csproj
+++ b/Source/Reloaded.Memory/Reloaded.Memory.csproj
@@ -4,6 +4,18 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <RootNamespace>Reloaded</RootNamespace>
     <LangVersion>latest</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageLicenseUrl>https://github.com/Reloaded-Project/Reloaded.Memory/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Reloaded-Project/Reloaded.Memory</PackageProjectUrl>
+    <PackageIconUrl>https://avatars1.githubusercontent.com/u/45473408</PackageIconUrl>
+    <RepositoryUrl></RepositoryUrl>
+    <RepositoryType></RepositoryType>
+    <Description>A fully featured C# memory editing of primitive or generic struct types in either current or an external process.</Description>
+    <Version>1.0.1</Version>
+    <Authors>Sewer56</Authors>
+    <Company />
+    <Product>Project Reloaded</Product>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -17,7 +29,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
-    <DocumentationFile>Reloaded.Memory.xml</DocumentationFile>
+    <DocumentationFile>bin\Reloaded.Memory.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
+    <DocumentationFile>bin\Reloaded.Memory.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
