--- a/Source/Reloaded.Memory.Tests/Reloaded.Memory.Tests.csproj
+++ b/Source/Reloaded.Memory.Tests/Reloaded.Memory.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFrameworks>netcoreapp2.1; net472</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Reloaded.Memory.Shared\Reloaded.Memory.Shared.csproj" />
     <ProjectReference Include="..\Reloaded.Memory\Reloaded.Memory.csproj" />
   </ItemGroup>
 
