--- a/Source/Reloaded.Memory.Benchmark/Reloaded.Memory.Benchmark.csproj
+++ b/Source/Reloaded.Memory.Benchmark/Reloaded.Memory.Benchmark.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.0;net472</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
