Fix: BufferedStreamReader does not seek backwards properly.
I am very, very embarrassed at this rookie mistake.

--- a/Source/Reloaded.Memory.Benchmark/Reloaded.Memory.Benchmark.csproj
+++ b/Source/Reloaded.Memory.Benchmark/Reloaded.Memory.Benchmark.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SeekLogic.cs~RF59e723.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
   </ItemGroup>
 
