--- a/Source/Reloaded.Memory.Benchmark/Reloaded.Memory.Benchmark.csproj
+++ b/Source/Reloaded.Memory.Benchmark/Reloaded.Memory.Benchmark.csproj
@@ -5,6 +5,14 @@
     <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netcoreapp3.0|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp3.0|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="SeekLogic.cs~RF59e723.TMP" />
   </ItemGroup>
